--- a/exelente_ru/css/content.css
+++ b/exelente_ru/css/content.css
@@ -10,40 +10,68 @@ a {
 	margin-right: auto;
 }
 h2.section-name {
-	font-family: Bebas Neue;
+	font-family: 'Bebas Neue', sans-serif;
 	font-size: 48px;
 	color: #DF5E16;
 	margin: 35px 25px 44px 0;;
 }
-select.school-selection {
-	width: 150px;
-	height: 28px;
-	margin: 45px 4px;
-	padding-left: 10px;
-	background: #FFFFFF;
-	border: 1px solid #004391;
-	font-family: Open Sans;
-	font-weight: 600;
-	font-size: 14px;
-	color: #000000;
+.selectbox {
+	vertical-align: middle;
+	cursor: pointer;	
+	margin: 45px 0;
 	background: url(../img/content-img/content_select_arrow-down.png) no-repeat;
-	background-position: 125px center;
-
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	text-indent: 0.01px; 
-	text-overflow: '';
-	-ms-appearance: none;
-	appearance: none;
+	background-position: 130px center;
 }
-option { 
-	font-family: Open Sans;
-	font-weight: 600;
+.selectbox .select {
+	width: 140px;
+	height: 29px;	
+	line-height: 27px;
+ padding-left: 10px;
 	font-size: 14px;
+ font-weight: 600;
+	font-family: 'Open Sans', sans-serif;
 	color: #000000;
+ border: 1px solid #004391;
+}
+.selectbox .dropdown {
+	top: 27px;
+	width: 150px;
+	margin: 0;
+	padding: 4px 0;
+	background: #FFFFFF;
+ border: 1px solid #004391;
+ border-top: none;
+	font-size: 14px;
+ font-weight: 600;
+ font-family: 'Open Sans', sans-serif;
+	color: #000000;
+}
+.selectbox ul {
+ margin: 0;
+ padding: 0;
+}
+.selectbox li {
+	padding: 4px 0 4px 10px;
+	color: #000000;
+ list-style: none;
+}
+
+.selectbox li:hover {
+	background: #DF5E16;
+	color: #FFFFFF;
+}
+.selectbox li:first-child {
+	display: none;
+}
+.selectbox li.disabled {
+	color: #AAAAAA;
+}
+.selectbox li.disabled:hover {
+	background: none;
 }
 section.content.content_schools {
 	max-width: 1180px;
+
 	display: flex;
 	justify-content: space-between;
 	align-items: flex-start;
@@ -59,85 +87,101 @@ section.sidebar__part {
 	position: relative;
 }
 section.sidebar__part h3 {
-	position: relative;
-	top: 13px;
-	left: 18px;
-	padding: 18px;
-	margin: 0;
-	font-family: Open Sans;
+ margin: 0;
+	padding: 19px 39px;
+	font-family: 'Open Sans', sans-serif;
 	font-weight: bold;
 	font-size: 12px;
 	color: #333333;
 }
 section.sidebar__part .sidebar-arrow {
 	position: relative;
-	left: 15px;
+	top: 0;
+	right: -10px;
 	display: inline-block;
 	width: 8px;
 	height: 5px;
-	background: url(../img/content-img/content_arrows.png) no-repeat;
+ background-position: -12px 0;
+	background: url(../img/content-img/content_arrows_sidebar.png) no-repeat;
+ transition: 0.5s;
+}
+section.sidebar__part .sidebar-arrow:active {
+ transform: rotate(180deg);
+ transition: 0.5s;
 }
 section.sidebar__part .arrow-down {
 	background-position: 0 0;
 }
 section.sidebar__part .arrow-up {
-	background-position: -9px 0;
+	background-position: -12px 0;
 }
+ul.choose-program__checkboxes,
+ul.choose-specialty__checkboxes,
 ul.choose-country__checkboxes {
-	position: relative;
-	top: -14px;
-	left: 20px;
+ position: relative;
+ top: -28px;
+ left: 23px;
 	list-style: none;
 	padding: 0;
-	margin: 0;
-	font-family: Open Sans;
+  margin: 0;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 10px;
 	color: #333333;
 }
-.country__checkbox {
-	display: none;
-}
-.checkbox-custom {
-	position: relative;
-	bottom: 15px;
-	width: 10px;
-	height: 10px;
-	background: #ffffff;
-	border: 1px solid #004391;
-	box-sizing: border-box;
-}
 .checkbox-custom,
 .label {
-	position: relative;
-	top: 10px;
-	right: -35px;
-	margin-top: 7px;
-	display: inline-block;
-	vertical-align: middle;
+ position: relative;
+ top: 10px;
+ right: -35px;
+ display: inline-block;
+ margin-top: 7px;
+ vertical-align: middle;
 }
 .label {
-	padding-left: 5px;
+ padding-left: 5px;
 }
-.country__checkbox:checked + .checkbox-custom::before {
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	display: block;
-	content: '';
-	background: #DF5E16;
-	outline: 1px solid #FFFFFF;
-	outline-offset: -1px;
+ul.choose-program__checkboxes span.label,
+ul.choose-specialty__checkboxes span.label {
+ display: inline-block;
+ max-width: 100px;
+ vertical-align: top;
+ margin-top: 4px;
+}
+input [type='checkbox'] {
+	display: inline-block;
+}
+.custom__checkbox {
+  display: none;
+}
+.checkbox-custom {
+ position: relative;
+ bottom: 15px;
+ width: 10px;
+ height: 10px;
+ background: #ffffff;
+ border: 1px solid #004391;
+ box-sizing: border-box;
+}
+.custom__checkbox:checked + .checkbox-custom::before {
+ position: absolute;
+ top: 0;
+ right: 0;
+ bottom: 0;
+ left: 0;
+ display: block;
+ content: '';
+ background: #DF5E16;
+ outline: 1px solid #FFFFFF;
+ outline-offset: -1px;
 }
 section.sidebar__part a.show-all {
-	position: relative;
-	top: -1px;
-	left: 39px;
+ position: relative;
+ top: -12px;
+ left: 42px;
 	display: inline-block;
 	margin: 0;
 	border-bottom: 2px solid #DF5E16;
-	font-family: Open Sans;
+	font-family: 'Open Sans', sans-serif;
 	font-style: italic;
 	font-size: 10px;
 	color: #333333;
@@ -148,19 +192,22 @@ section.sidebar__part.filters {
 .button__action.apply {
 	width: 114px;
 	height: 35px;
-	margin: 41px auto 0;
-	font-family: Bebas Neue;
+	margin: 30px auto 0;
+	font-family: 'Bebas Neue', sans-serif;
 	font-size: 12px;
 	letter-spacing: 4px;
 	color: #FFFFFF;
 }
+.button__action.apply:hover {
+	background: #F58A4E;
+}
 a.reset-filter {
 	display: inline-block;
-	margin: 23px auto 36px;
+	margin: 23px auto 35px;
 	padding-bottom: 3px;
 	text-align: center;
 	border-bottom: 2px solid #DF5E16;
-	font-family: Bebas Neue;
+	font-family: 'Bebas Neue', sans-serif;
 	font-size: 10px;
 	letter-spacing: 0.4em;
 	color: #333333;
@@ -210,7 +257,7 @@ cursor: pointer;
 .school-card h2.school-card__name  {
 	position: relative;
 	top: 20px;
-	font-family: Bebas Neue;
+	font-family: 'Bebas Neue', sans-serif;
 	font-size: 28px;
 	color: #004391;
 	text-align: center;
@@ -226,7 +273,7 @@ cursor: pointer;
 	position: relative;
 	top: 20px;
 	left: 6px;
-	font-family: Open Sans;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 16px;
 	margin-left: 50px;
 	color: #333333;
@@ -239,7 +286,7 @@ cursor: pointer;
 	margin: 70px auto;
 	width: 201px;
 	height: 48px;
-	font-family: Bebas Neue;
+	font-family: 'Bebas Neue', sans-serif;
 	font-size: 18px;
 	letter-spacing: 4px;
 }
@@ -275,12 +322,12 @@ nav.schools-catalogue__pagination  a {
 	display: inline-block;
 	padding: 5px 11px;
 	text-align: center;
-	font-family: Open Sans;
+	font-family: 'Open Sans', sans-serif;
 	font-weight: bold;
 	font-size: 14px;
 	color: #004391;
 }
-nav.schools-catalogue__pagination .active {
+nav.schools-catalogue__pagination a:not(.pagi-arrow):active {
 	background: #DF5E16;
 	color: #FFFFFF;
 }
@@ -289,7 +336,7 @@ nav.schools-catalogue__pagination .active {
 	left: 13px;
 	display: block;
 	width: 15px;
-	height: 15px;
+	height: 20px;
 	margin-left: -21px;
 	background: url(../img/content-img/content_arrows-pagination.png) no-repeat;
 }
