--- a/exelente_ru/css/content.css
+++ b/exelente_ru/css/content.css
@@ -1,3 +1,8 @@
+section.content.content__schools {
+    max-width: 1170px;
+    display: flex;
+    margin: 0 auto;
+}
 
 a {
 	text-decoration: none;
