--- a/exelente_ru/css/header.css
+++ b/exelente_ru/css/header.css
@@ -11,43 +11,221 @@
   font-size: 10px;
   color: #004391;
 }
+@media (max-width: 576px) {
+  .top-block {
+    display: none;
+  }
+}
 .top-block__city {
   position: relative;
   display: flex;
   align-items: center;
   height: 100%;
-  min-width: 59.2%;
 }
 .top-block__city i {
   margin-right: 10px;
   font-size: 1.5em;
 }
-.top-block__popups {
-  display: flex;
-  min-width: 25.2%;
+@media (max-width: 576px) {
+  .top-block__city i {
+    color: #F36C21;
+  }
+}
+@media (max-width: 576px) {
+  .top-block__city {
+    position: fixed;
+    top: 80px;
+    left: 50px;
+    display: flex;
+    align-items: center;
+    z-index: 110;
+    height: unset;
+    width: unset;
+    font-weight: bold;
+    font-size: 18px;
+    color: #004391;
+  }
+}
+.top-block__fill {
+  flex: 1;
 }
 .top-block__phone {
+  margin-right: 45px;
   padding-top: 3px;
   font-family: 'Bebas Neue';
   font-size: 18px;
   font-weight: bold;
   color: #DF5E16;
 }
+.top-block__popups {
+  display: flex;
+  min-width: 25.2%;
+}
 .top-block__item {
   margin-left: 1px;
+  margin-right: 10px;
   text-align: right;
-}
-.top-block__item:hover {
-  color: #DF5E16;
-  cursor: pointer;
 }
 .top-block__item i {
   margin-left: 5px;
   font-size: 1.5em;
 }
+.top-block__item:hover {
+  color: #DF5E16;
+  cursor: pointer;
+}
 .top-block__item_favorite {
   flex: 1;
-  padding-right: 17px;
+  padding-right: 7px;
+}
+@media (min-width: 577px) {
+  .hidden-menu {
+    display: none;
+    padding: 10px 0;
+    background-color: #FFFFFF;
+  }
+}
+@media (max-width: 576px) {
+  .hidden-menu {
+    display: none;
+  }
+}
+@media (min-width: 577px) {
+  .hidden-menu__logo img {
+    height: 49px;
+  }
+}
+@media (min-width: 577px) {
+  .hidden-menu__logo {
+    padding-top: 16px;
+  }
+}
+@media (max-width: 576px) {
+  .hidden-menu__logo {
+    position: fixed;
+    top: -25px;
+    left: -119px;
+    z-index: 110;
+    transform: scale(0.3);
+  }
+}
+.hidden-menu__popups i:hover {
+  cursor: pointer;
+}
+@media (min-width: 577px) {
+  .hidden-menu__popups i {
+    font-size: 9px;
+  }
+}
+@media (min-width: 577px) {
+  .hidden-menu__popups input {
+    width: 285px;
+    height: 15px;
+    font-size: 10px;
+    color: #004391;
+    border: none;
+    border-bottom: solid 1px #004391;
+    outline: none;
+  }
+}
+.hidden-menu__popups input::placeholder {
+  font-size: 10px;
+  color: #004391;
+  margin-left: 222px;
+}
+@media (min-width: 577px) {
+  .hidden-menu__popups {
+    display: none;
+    justify-content: flex-end;
+    flex: 1;
+    font-size: 10px;
+    color: #004391;
+  }
+}
+@media (max-width: 576px) {
+  .hidden-menu__popups {
+    position: fixed;
+    flex-direction: column-reverse;
+    min-width: unset;
+    z-index: 110;
+  }
+}
+@media (min-width: 577px) {
+  .hidden-menu__item {
+    margin-left: 20px;
+  }
+}
+@media (min-width: 577px) {
+  .hidden-menu__item:first-child {
+    margin-right: 80px;
+  }
+}
+.hidden-menu__menu:hover {
+  cursor: pointer;
+}
+@media (min-width: 577px) {
+  .hidden-menu__menu {
+    position: relative;
+    z-index: 100;
+    display: flex;
+    align-items: center;
+    padding: 15px 60px 13px 18px;
+    font-family: Bebas Neue;
+    font-size: 18px;
+    letter-spacing: 4px;
+    color: #004391;
+    background-image: url(../img/hidden-menu__logo.svg);
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    border: 2px solid #004391;
+  }
+}
+.hidden-menu__close:hover {
+  cursor: pointer;
+}
+@media (min-width: 577px) {
+  .hidden-menu__close {
+    position: absolute;
+    top: -8px;
+    right: 0;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    background-color: #004391;
+    color: #ffffff;
+  }
+}
+@media (min-width: 577px) {
+  .hidden-menu__close-pic {
+    justify-content: center;
+    align-items: center;
+    width: 23px;
+    height: 23px;
+    background-image: url(../img/hidden-menu__close.png);
+    background-size: cover;
+  }
+}
+@media (min-width: 577px) {
+  .hidden-menu_visible {
+    position: fixed;
+    top: 0;
+    display: block;
+    z-index: 110;
+    height: auto;
+    animation: fade-in 1s ease;
+  }
+}
+@media (min-width: 1281px) {
+  .hidden-menu_visible {
+    min-width: 1280px;
+  }
+}
+@media (max-width: 1280px) {
+  .hidden-menu_visible {
+    width: 1280px;
+  }
 }
 .menu-block {
   display: flex;
@@ -56,6 +234,15 @@
   min-height: 50px;
   height: 1px;
   background-color: #004391;
+}
+@media (max-width: 576px) {
+  .menu-block {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+  }
 }
 .menu-block__logo {
   display: flex;
@@ -71,306 +258,17 @@
 .menu-block__logo i:hover {
   cursor: pointer;
 }
+@media (max-width: 576px) {
+  .menu-block__logo {
+    margin-left: 20px;
+  }
+}
 @media (min-width: 577px) {
   .menu-block__menu-pic {
     display: none;
   }
-  .menu-block__contacts {
-    display: none;
-  }
-  .menu-block__menu {
-    width: 682px;
-    margin-right: 3px;
-  }
-  .main-menu__items {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-bottom: 7px;
-    list-style: none;
-  }
-  .main-menu__item {
-    position: relative;
-  }
-  .main-menu__item a {
-    font-family: Bebas Neue;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-size: 14px;
-    font-weight: bold;
-    color: #FFFFFF;
-  }
-  .main-menu__item a:hover ~ ul {
-    display: block;
-  }
-  .main-menu__subitems {
-    position: absolute;
-    display: none;
-    top: 36px;
-    left: -17px;
-    z-index: 5;
-    padding: 12px 70px 30px 17px;
-    background: #FFFFFF;
-    border: 1px solid #004391;
-    box-sizing: border-box;
-    list-style: none;
-  }
-  .main-menu__subitems_visible {
-    display: block;
-  }
-  .main-menu__subitems a {
-    font-family: 'Open Sans';
-    font-size: 12px;
-    font-weight: normal;
-    color: #000000;
-    text-transform: unset;
-    white-space: nowrap;
-  }
-  .main-menu__subitems a:hover {
-    color: #DF5E16;
-    text-decoration: underline;
-  }
-  .main-menu__subitem {
-    margin-top: 5px;
-  }
-  .main-menu__subitem::first-letter {
-    text-transform: uppercase;
-  }
-}
-.hidden-menu {
-  display: none;
-  padding: 10px 0;
-  background-color: #FFFFFF;
-}
-.hidden-menu__popups {
-  display: none;
-  justify-content: flex-end;
-  flex: 1;
-  font-size: 10px;
-  color: #004391;
-}
-.hidden-menu__popups i {
-  font-size: 9px;
-}
-.hidden-menu__popups i:hover {
-  cursor: pointer;
-}
-.hidden-menu__popups input {
-  width: 285px;
-  height: 15px;
-  font-size: 10px;
-  color: #004391;
-  border: none;
-  border-bottom: solid 1px #004391;
-  outline: none;
-}
-.hidden-menu__popups input::placeholder {
-  font-size: 10px;
-  color: #004391;
-  margin-left: 222px;
-}
-.hidden-menu__item {
-  margin-left: 20px;
-}
-.hidden-menu__item:first-child {
-  margin-right: 80px;
-}
-.hidden-menu_visible {
-  position: fixed;
-  top: 0;
-  display: block;
-  z-index: 110;
-  height: auto;
-  animation: fade-in 1s ease;
-}
-@media (min-width: 1281px) {
-  .hidden-menu_visible {
-    min-width: 1280px;
-  }
-}
-@media (max-width: 1280px) {
-  .hidden-menu_visible {
-    width: 1280px;
-  }
-}
-.hidden-menu__logo {
-  padding-top: 16px;
-}
-.hidden-menu__logo img {
-  height: 49px;
-}
-.hidden-menu__menu {
-  position: relative;
-  z-index: 100;
-  display: flex;
-  align-items: center;
-  padding: 15px 60px 13px 18px;
-  font-family: Bebas Neue;
-  font-size: 18px;
-  letter-spacing: 4px;
-  color: #004391;
-  background-image: url(../img/hidden-menu__logo.svg);
-  background-repeat: no-repeat;
-  background-position: right 10px center;
-  border: 2px solid #004391;
-}
-.hidden-menu__menu:hover {
-  cursor: pointer;
-}
-.hidden-menu__close {
-  position: absolute;
-  top: -8px;
-  right: 0;
-  display: none;
-  justify-content: center;
-  align-items: center;
-  width: 50px;
-  height: 50px;
-  background-color: #004391;
-  color: #ffffff;
-}
-.hidden-menu__close:hover {
-  cursor: pointer;
-}
-.hidden-menu + .menu-block_from-hidden {
-  position: fixed;
-  top: 0;
-  z-index: 100;
-  width: 1280px;
-  height: 100vh;
-  background-color: #ffffff;
-}
-.hidden-menu + .menu-block_from-hidden .wrapper {
-  justify-content: flex-start;
-  align-items: stretch;
-  padding-top: 140px;
-}
-.hidden-menu + .menu-block_from-hidden .contacts {
-  display: flex;
-  flex-direction: column;
-  max-height: 450px;
-  margin-right: 128px;
-}
-.hidden-menu + .menu-block_from-hidden .contacts__text {
-  font-size: 10px;
-  color: #004391;
-}
-.hidden-menu + .menu-block_from-hidden .contacts__info {
-  margin-bottom: 30px;
-  font-family: Bebas Neue;
-  font-weight: bold;
-  font-size: 24px;
-  color: #F36C21;
-}
-.hidden-menu + .menu-block_from-hidden .contacts__social-links {
-  display: flex;
-  margin-top: 8px;
-}
-.hidden-menu + .menu-block_from-hidden .contacts__social-links > a:not(:first-child) {
-  margin-left: 23px;
-}
-.hidden-menu + .menu-block_from-hidden .contacts__social-link {
-  width: 26px;
-  height: 25px;
-  background-repeat: no-repeat;
-  background-position: 0 0;
-  background-image: url(../img/social-links__sprite_blue.png);
-}
-.hidden-menu + .menu-block_from-hidden .contacts__social-link:hover {
-  transform: scale(1.2);
-}
-.hidden-menu + .menu-block_from-hidden .contacts__social-link_fb {
-  background-position: -50px 0;
-}
-.hidden-menu + .menu-block_from-hidden .contacts__social-link_youtube {
-  background-position: -100px 0;
-}
-.hidden-menu + .menu-block_from-hidden .contacts__social-link_vk {
-  background-position: -150px 0;
-}
-.hidden-menu + .menu-block_from-hidden .contacts__item_social-media {
-  margin-top: 170px;
-  font-family: Bebas Neue;
-  font-size: 18px;
-  color: #004391;
-}
-.hidden-menu + .menu-block_from-hidden .menu-block__logo {
-  display: none;
-}
-.hidden-menu + .menu-block_from-hidden .menu-block__menu-pic {
-  display: none;
-}
-.hidden-menu + .menu-block_from-hidden .menu-block__menu {
-  margin: 0;
-  max-height: 450px;
-  width: unset;
-}
-.hidden-menu + .menu-block_from-hidden .main-menu__items {
-  display: flex;
-  max-width: 800px;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: flex-start;
-  list-style: none;
-}
-.hidden-menu + .menu-block_from-hidden .main-menu__item {
-  position: static;
-  flex-basis: 160px;
-  margin-bottom: 30px;
-  margin-right: 30px;
-}
-.hidden-menu + .menu-block_from-hidden .main-menu__item a {
-  font-family: Bebas Neue;
-  text-transform: uppercase;
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: bold;
-  color: #004391;
-}
-.hidden-menu + .menu-block_from-hidden .main-menu__item a:hover {
-  color: #DF5E16;
-  border-bottom: 2px solid #DF5E16;
-}
-.hidden-menu + .menu-block_from-hidden .main-menu__subitems {
-  position: static;
-  display: block;
-  padding: 0;
-  border: none;
-  list-style: none;
-}
-.hidden-menu + .menu-block_from-hidden .main-menu__subitems a {
-  font-family: 'Open Sans';
-  font-size: 12px;
-  font-weight: normal;
-  color: #000000;
-  text-transform: unset;
-  white-space: nowrap;
-}
-.hidden-menu + .menu-block_from-hidden .main-menu__subitems a:hover {
-  color: #DF5E16;
-}
-.hidden-menu + .menu-block_from-hidden .main-menu__subitem {
-  margin-top: 5px;
-}
-.hidden-menu + .menu-block_from-hidden .main-menu__subitem::first-letter {
-  text-transform: uppercase;
 }
 @media (max-width: 576px) {
-  .top-block,
-  .main-menu,
-  .main-menu__items {
-    display: none;
-  }
-  .menu-block {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 10;
-  }
-  .menu-block__logo {
-    margin-left: 20px;
-  }
   .menu-block__menu-pic {
     display: block;
     width: 24px;
@@ -384,12 +282,248 @@
   .menu-block__menu-pic:hover {
     cursor: pointer;
   }
+  .menu-block__menu-pic_close {
+    display: none;
+  }
+}
+@media (min-width: 577px) {
   .menu-block__contacts {
     display: none;
   }
-  .hidden-menu {
-    top: -100%;
+}
+@media (max-width: 576px) {
+  .menu-block__contacts {
+    display: none;
   }
+}
+@media (min-width: 577px) {
+  .menu-block__menu {
+    width: 682px;
+    margin-right: 3px;
+  }
+}
+.menu-block_from-hidden {
+  position: fixed;
+  top: 0;
+  z-index: 100;
+  width: 1280px;
+  height: 100vh;
+  background-color: #ffffff;
+}
+.menu-block_from-hidden .wrapper {
+  justify-content: flex-start;
+  align-items: stretch;
+  padding-top: 140px;
+}
+.menu-block_from-hidden .contacts {
+  display: flex;
+  flex-direction: column;
+  max-height: 450px;
+  margin-right: 128px;
+}
+.menu-block_from-hidden .contacts__text {
+  font-size: 10px;
+  color: #004391;
+}
+.menu-block_from-hidden .contacts__info {
+  margin-bottom: 30px;
+  font-family: Bebas Neue;
+  font-weight: bold;
+  font-size: 24px;
+  color: #F36C21;
+}
+.menu-block_from-hidden .contacts__social-links {
+  display: flex;
+  margin-top: 8px;
+}
+.menu-block_from-hidden .contacts__social-links > a:not(:first-child) {
+  margin-left: 23px;
+}
+.menu-block_from-hidden .contacts__social-link {
+  width: 26px;
+  height: 25px;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-image: url(../img/social-links__sprite_blue.png);
+}
+.menu-block_from-hidden .contacts__social-link:hover {
+  transform: scale(1.2);
+}
+.menu-block_from-hidden .contacts__social-link_fb {
+  background-position: -50px 0;
+}
+.menu-block_from-hidden .contacts__social-link_youtube {
+  background-position: -100px 0;
+}
+.menu-block_from-hidden .contacts__social-link_vk {
+  background-position: -150px 0;
+}
+.menu-block_from-hidden .contacts__item_social-media {
+  margin-top: 170px;
+  font-family: Bebas Neue;
+  font-size: 18px;
+  color: #004391;
+}
+.menu-block_from-hidden .main-menu {
+  width: unset;
+}
+@media (max-width: 576px) {
+  .menu-block_from-hidden .main-menu {
+    position: fixed;
+    top: 0;
+    z-index: 100;
+    width: 100vw;
+    height: 100vh;
+    background-color: #ffffff;
+  }
+}
+.menu-block_from-hidden .main-menu__items {
+  display: flex;
+  max-width: 800px;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  list-style: none;
+}
+.menu-block_from-hidden .main-menu__item {
+  position: static;
+  flex-basis: 25%;
+  margin-bottom: 30px;
+}
+.menu-block_from-hidden .main-menu__item a {
+  font-family: Bebas Neue;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: bold;
+  color: #004391;
+}
+.menu-block_from-hidden .main-menu__item a:hover {
+  color: #DF5E16;
+}
+.menu-block_from-hidden .main-menu__subitems {
+  position: static;
+  display: block;
+  padding: 0;
+  border: none;
+  list-style: none;
+}
+.menu-block_from-hidden .main-menu__subitems a {
+  font-family: 'Open Sans';
+  font-size: 12px;
+  font-weight: normal;
+  color: #000000;
+  text-transform: unset;
+  white-space: nowrap;
+}
+.menu-block_from-hidden .main-menu__subitems a:hover {
+  color: #DF5E16;
+}
+.menu-block_from-hidden .main-menu__subitem {
+  margin-top: 5px;
+}
+.menu-block_from-hidden .main-menu__subitem::first-letter {
+  text-transform: uppercase;
+}
+@media (min-width: 577px) {
+  .menu-block_from-hidden .menu-block__logo {
+    display: none;
+  }
+}
+@media (max-width: 576px) {
+  .menu-block_from-hidden .menu-block__logo {
+    display: none;
+  }
+}
+@media (max-width: 576px) {
+  .menu-block_from-hidden .menu-block__menu-pic_close {
+    position: fixed;
+    right: 20px;
+    top: 15px;
+    display: inline-block;
+    color: #F36C21;
+  }
+}
+@media (max-width: 576px) {
+  .main-menu {
+    display: none;
+  }
+}
+@media (min-width: 577px) {
+  .main-menu__items {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 7px;
+    list-style: none;
+  }
+}
+@media (max-width: 576px) {
+  .main-menu__items {
+    display: none;
+  }
+}
+.main-menu__item a {
+  font-family: Bebas Neue;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: bold;
+  color: #FFFFFF;
+}
+.main-menu__item a:hover {
+  color: #F36C21;
+}
+.main-menu__item a:hover ~ ul {
+  display: block;
+}
+@media (min-width: 577px) {
+  .main-menu__item {
+    position: relative;
+  }
+}
+@media (min-width: 577px) {
+  .main-menu__subitems a {
+    font-family: 'Open Sans';
+    font-size: 12px;
+    font-weight: normal;
+    color: #000000;
+    text-transform: unset;
+    white-space: nowrap;
+  }
+}
+@media (min-width: 577px) {
+  .main-menu__subitems a:hover {
+    color: #DF5E16;
+    text-decoration: underline;
+  }
+}
+@media (min-width: 577px) {
+  .main-menu__subitems {
+    position: absolute;
+    display: none;
+    top: 36px;
+    left: -17px;
+    z-index: 5;
+    padding: 12px 70px 30px 17px;
+    background: #FFFFFF;
+    border: 1px solid #004391;
+    box-sizing: border-box;
+    list-style: none;
+  }
+}
+@media (min-width: 577px) {
+  .main-menu__subitems_visible {
+    display: block;
+  }
+}
+@media (min-width: 577px) {
+  .main-menu__subitem {
+    margin-top: 5px;
+  }
+}
+.main-menu__subitem::first-letter {
+  text-transform: uppercase;
 }
 @keyframes fade-in {
   0% {
